--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(pl_create_gist)
 export(pl_do_gist)
 export(pl_get_credentials)
 export(pl_gist)
+export(pl_places)
 export(pl_status)
 import(assertthat)
 import(httr)
