--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(pl_do_gist)
 export(pl_get_credentials)
 export(pl_gist)
 export(pl_places)
+export(pl_search)
 export(pl_status)
 import(assertthat)
 import(httr)
