--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: pleiades
-Title: R interface to Pleiades database
+Title: R client for the Pleiades Archeological Database
 Description: This package provides a set of functions for interacting with the
     Pleiades API, including getting status datat, places data, and creating a
-    geojson based map on Github gists.
+    geojson based map on GitHub gists.
 Version: 0.0.1.99
-Date: 2014-07-31
+Date: 2014-10-30
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com")
 License: MIT + file LICENSE
-URL: https://github.com/sckott/pleiades
-BugReports: http://www.github.com/sckott/pleiades/issues
+URL: https://github.com/ropensci/pleiades
+BugReports: http://www.github.com/ropensci/pleiades/issues
 Imports:
     httr,
     jsonlite,
