--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ URL: https://github.com/ropensci/pleiades
 BugReports: http://www.github.com/ropensci/pleiades/issues
 Imports:
     httr,
-    jsonlite,
-    assertthat
+    jsonlite
 Suggests:
     testthat,
     roxygen2,
