--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ URL: https://github.com/ropensci/pleiades
 BugReports: http://www.github.com/ropensci/pleiades/issues
 Imports:
     httr,
-    jsonlite
+    jsonlite,
+    gistr
 Suggests:
     testthat,
     roxygen2,
