now with functions for local search of locations, places, and names, #1 decided to go with dplyr, not sure if this is the best choice

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(pl_cache)
 export(pl_cache_clear)
 export(pl_gist)
 export(pl_places)
-export(pl_search)
+export(pl_search_loc)
+export(pl_search_names)
+export(pl_search_places)
 export(pl_status)
+import(dplyr)
 import(gistr)
 import(httr)
 import(jsonlite)
