--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"),
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/pleiades
 BugReports: http://www.github.com/ropensci/pleiades/issues
+Depends:
+    dplyr
 Imports:
     httr,
     jsonlite,
