now only importing gist_creat from gistr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,6 @@ export(pl_search_names)
 export(pl_search_places)
 export(pl_status)
 import(dplyr)
-import(gistr)
 import(httr)
 import(jsonlite)
+importFrom(gistr,gist_create)
