--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: r
+sudo: false
+cache: packages
+
 notifications:
   email:
-    on_success: change
-    on_failure: change
+    on_success: never
+    on_failure: never
+
