moved helper fuxns into zzz file tidied up most of code to less than 80 line width, and some spacing fixes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,12 @@ BugReports: https://github.com/ropensci/pleiades/issues
 Depends:
     dplyr
 Imports:
-    httr,
-    jsonlite,
-    gistr
+    crul (>= 0.1.0),
+    jsonlite (>= 1.1),
+    gistr (>= 0.3.6)
 Suggests:
-    testthat,
     roxygen2,
+    testthat,
     knitr
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
