--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ cache: packages
 
 notifications:
   email:
-    on_success: never
-    on_failure: never
-
+    on_success: change
+    on_failure: change
