--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Interface to the 'Pleiades' 'Archeological' Database
 Description: Provides a set of functions for interacting with the
     'Pleiades' 'API', including getting status data, places data, and
     creating a 'GeoJSON' based map on 'GitHub' 'gists'.
-Version: 0.1.0
+Version: 0.1.0.9000
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com")
 License: MIT + file LICENSE
@@ -11,14 +11,14 @@ URL: https://github.com/ropensci/pleiades
 BugReports: https://github.com/ropensci/pleiades/issues
 Imports:
     dplyr (>= 0.5.0),
-    crul (>= 0.1.6),
+    crul (>= 0.2.0),
     jsonlite (>= 1.1),
     gistr (>= 0.3.6),
-    rappdirs,
-    RSQLite
+    rappdirs
 Suggests:
     roxygen2 (>= 5.0.1),
     testthat,
-    knitr
+    knitr,
+    RSQLite
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
