--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ r_check_args: "--as-cran --run-dontrun"
 
 r_github_packages:
   - jimhester/covr
+  - ropensci/gistr
 
 after_success:
   - Rscript -e 'covr::codecov()'
