--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,22 +4,24 @@ Description: Provides a set of functions for interacting with the
     'Pleiades' (<https://pleiades.stoa.org/>) 'API', including 
     getting status data, places data, and creating a 'GeoJSON' 
     based map on 'GitHub' 'gists'.
-Version: 0.1.2.9100
+Version: 0.1.7.9310
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com")
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/pleiades
 BugReports: https://github.com/ropensci/pleiades/issues
 Imports:
+    DBI (>= 0.6-1),
     dplyr (>= 0.5.0),
-    crul (>= 0.2.0),
-    jsonlite (>= 1.1),
-    gistr (>= 0.3.7.9100),
+    dbplyr (>= 1.0.0),
+    RSQLite (>= 1.1-2),
+    crul (>= 0.3.6),
+    jsonlite (>= 1.5),
+    gistr (>= 0.4.0),
     rappdirs
 Suggests:
     roxygen2 (>= 6.0.1),
     testthat,
     knitr,
-    RSQLite
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
